test/sema/typeck/impl/extension-nested-err.out
error: no method with name `bar` in type `Foo[Foo[Int32]]`.
--> extension-nested-err.dora:9:5
 | }
 | fn g(value: Foo[Foo[Int32]]) {
 |     value.bar();
       ~~~~~~~~~~~
 | }
 | 
1 error found.
